--- a/css/main.css
+++ b/css/main.css
@@ -132,8 +132,16 @@ h5,.five{
 	align-items: center;
 	justify-content: flex-end;
 }
+.link_accent{
+	color: var(--accent);
+	font-size: 14px;
+	cursor: pointer;
+}
 .link span{
 	margin-right: 8px;
+}
+.text-normal{
+	text-transform: none;
 }
 .relative{position: relative;}
 .white{
@@ -405,6 +413,7 @@ header .header-widget .menu_toggle {
 	font-size: 14px;
 	position: relative;
 	padding: 8px 14px;
+	cursor: pointer;
 }
 .verification_steps_item::before{
 	content: '';
@@ -611,7 +620,7 @@ li.current::after {
 	position: relative;
 	width: 100%;
 }
-.form-group + *{
+.form-group + div{
 	margin-top: 24px;
 }
 .form-group-row .form-group + *{
@@ -621,6 +630,10 @@ li.current::after {
 form p{
 	color: var(--lightext);
 	font-size: 12px;
+}
+.choice_button.choice_accent.active label{
+	color: #fff;
+	background: var(--accent);
 }
 .choice_button.active label{
 	border-color: var(--accent);
@@ -756,7 +769,7 @@ background-position: center center;
 	opacity: 1;
 }
 .page_content{
-	margin-bottom: 80px;
+	margin-bottom: 40px;
 }
 
 /* application search */
@@ -1244,6 +1257,161 @@ footer nav ul li a{
 footer .copyright{
 	margin-top: 46px;
 }
+/* other form items */
+body .select2-container{
+	width: 100% !important;
+}
+body .select2-container--default .select2-selection--single{
+	border-radius: 0;
+	border: var(--border)
+}
+body .select2-container .select2-selection--single .select2-selection__rendered{
+	font-size: 14px;
+	padding: 6px 13px;
+}
+body .select2-container .select2-selection--single{
+	height: auto;
+}
+body .select2-container--default .select2-selection--single .select2-selection__arrow{
+	height: 100%;
+	right: 6px;
+}
+body .select2-container--default .select2-selection--single .select2-selection__arrow b{
+	border: none;
+	background: url('../images/icons/dropdown.svg') no-repeat center center;
+	border-style: none !important;
+	width: 100%;
+    height: 10px;
+		left: auto;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		margin: auto;
+}
+body span.select2.select2-container.select2-container--default.select2-container--below.select2-container--focus.select2-container--open .select2-selection--single .select2-selection__arrow{
+	transform: rotate(180deg);
+}
+body .select2-dropdown{
+	border: var(--border);
+}
+body .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable{
+	background: var(--accent);
+	font-size: 14px;
+	padding: 6px 13px;
+}
+body .select2-results__option--selectable{
+	font-size: 14px;
+	padding: 6px 13px;
+}
+.select-group  .select2:first-child .select2-selection--single{
+	max-width: 230px;
+}
+.select-group  .select2:last-child .select2-selection--single{
+	border-left: none;
+}
+body .select2-dropdown{
+	border-radius: 0;
+}
+.count_block {
+	display: flex;
+	align-items: center;
+	position: relative;
+}
+.count_block input{
+	max-width: 85px;
+	max-height: 40px;
+	border-left: none;
+	border-right: none;
+	text-align: center;
+}
+.count_block .plus,.count_block .minus{
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: var(--border);
+	cursor: pointer;
+}
+.input_count{
+	position: relative;
+}
+.count_block .input_count span{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 5px;
+	display: flex;
+	align-items: center;
+	margin: auto;
+}
+
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+input[type="checkbox"] {
+	width: auto;
+}
+/*checkbox*/
+input[type="checkbox"]{
+	position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 16px;
+  width: 16px;
+  background-color: transparent;
+	border: 1px solid var(--accent);
+	border-radius: none;
+}
+.checkbox{
+	position: relative;
+	padding-left: 26px;
+	cursor: pointer;
+	line-height: 1.6;
+	text-align: left;
+}
+.form-row .checkbox{
+	width: auto;
+}
+.checkbox:hover input ~ .checkmark {
+	background-color: var(--accent);
+}
+.checkbox input:checked ~ .checkmark {
+  background-color: var(--accent);
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+.checkbox .checkmark:after {
+	left: 5px;
+	top: 2px;
+	width: 5px;
+	height: 9px;
+	border: solid white;
+	border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.checkbox span{text-align: left;font-size: 14px;line-height: 1.3;}
 /* popup */
 .active.popup {
 	opacity: 1;
@@ -1311,4 +1479,19 @@ footer .copyright{
 	z-index: 1;
 	cursor: pointer;
 	transition: 0.2s ease all;
+}
+
+/* application */
+.application_total_list_item{
+	border: var(--border);
+	padding: 16px;
+}
+.application_total_list_item + *{
+	margin-top: 8px;
+}
+.application_total_list_item img{
+	width: 138px;
+	height: 104px;
+	object-fit: cover;
+	margin-right: 16px;
 }
