--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,24 @@
 
 /* xl <= Extra extra large (xxl) */
 @media (max-width : 1400px) {
-
+	#delivery_type + .select2-container{
+		min-width: 260px;
+	}
+	.choice_button label{
+		padding: 10px 9px;
+	}
+	label.label-small{
+		font-size: 10px;
+	}
+	.form-group.select-group.d-flex{
+		flex-flow: column;
+	}
+	.form-group.select-group.d-flex .select2:last-child .select2-selection--single{
+		border-left: var(--border);
+	}
+	#delivery_type + .select2 .select2-selection--single{
+		border-left: var(--border) !important;
+	}
 }
 
 /* lg <= Extra large (xl) */
